@@ -1,4 +1,5 @@
 Version 5.9.3
+- Fixed automatic detection of floats for printf/scanf
 - Fixed optimizer errors on SCA, XORO32, and similar instructions
 - Fixed a spurious warning about 0-0 in inline assembly
 - Prevent loops containing BRK from being optimized to REP
